# Godryk

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/services/: rag_service.py
data/: .~lock.Sheet1.csv#  Sheet1.csv
src/: main.py
src/api/routes/: __init__.py  ingest_router.py  search_router.py
src/core/: config.py  logger.py
src/db/: milvus_client.py
src/services/: embeddings.py  ingestion_service.py  search_service.py
tests/: test_health.py
